[workspace]
members = [
    "core",
    "ui",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

# Testing
cucumber = { version = "0.20", features = ["macros"] }
pretty_assertions = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1