[package]
name = "sankey-core"
version = "0.1.0"
edition = "2021"
authors = ["w2xel"]
description = "Core logic for Sankey Maker - pure functional state management"
license = "MIT"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# For testing
cucumber = { workspace = true, optional = true }
pretty_assertions = { workspace = true, optional = true }

[dev-dependencies]
cucumber = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = []
testing = ["cucumber", "pretty_assertions"]

[lib]
name = "sankey_core"
path = "src/lib.rs"

[[test]]
name = "cucumber_tests"
harness = false
required-features = ["testing"]