[package]
name = "sankey-ui"
version = "0.1.0"
edition = "2021"
authors = ["w2xel"]
description = "Yew frontend for Sankey Maker - full Rust web UI"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Workspace dependencies
sankey-core = { path = "../core" }
charming-wrapper = { path = "../charming-wrapper" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Yew for full Rust frontend
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo = { version = "0.10", features = ["serde"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlElement", "MouseEvent", "KeyboardEvent"] }
console_log = "1.0"
log = "0.4"

# For styling
yew-styles = "0.1"

# For file downloads (export functionality)
gloo-file = "0.3"

[dev-dependencies]
sankey-core = { path = "../core", features = ["testing"] }
wasm-bindgen-test = "0.3"

[build-dependencies]

[features]
default = []
testing = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]